--- a/LocalizationExamples/de.lproj/Main.strings
+++ b/LocalizationExamples/de.lproj/Main.strings
@@ -1,21 +1,20 @@
-
 /* Class = "IBUILabel"; text = "Image:"; ObjectID = "5Rr-E6-D4X"; */
-"5Rr-E6-D4X.text" = "Bild:";
+"5Rr-E6-D4X.text" = "BildX:";
 
 /* Class = "IBUILabel"; text = "date"; ObjectID = "5dB-Pr-MK5"; */
 "5dB-Pr-MK5.text" = "date";
 
 /* Class = "IBUILabel"; text = "Number:"; ObjectID = "LZB-1k-Ql0"; */
-"LZB-1k-Ql0.text" = "Anzahl:";
+"LZB-1k-Ql0.text" = "AnzahlX:";
 
 /* Class = "IBUILabel"; text = "text"; ObjectID = "Ln9-L0-CIr"; */
 "Ln9-L0-CIr.text" = "text";
 
 /* Class = "IBUILabel"; text = "Date:"; ObjectID = "PCX-Ko-I9l"; */
-"PCX-Ko-I9l.text" = "Datum:";
+"PCX-Ko-I9l.text" = "DatumX:";
 
 /* Class = "IBUILabel"; text = "Currency:"; ObjectID = "VOf-rP-YvT"; */
-"VOf-rP-YvT.text" = "Währung:";
+"VOf-rP-YvT.text" = "WährungX:";
 
 /* Class = "IBUILabel"; text = "Text:"; ObjectID = "by7-V4-89P"; */
 "by7-V4-89P.text" = "Text:";
@@ -25,3 +24,4 @@
 
 /* Class = "IBUILabel"; text = "number"; ObjectID = "kee-wJ-ET9"; */
 "kee-wJ-ET9.text" = "number";
+
