--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -1,8 +1,3 @@
-/* 
-  Localizable.strings
-  LocalizationExamples
+/* Good Morning - comment */
+"GOOD_MORNING" = "Guten MorgenX";
 
-  Created by Daniel Wallace on 28/01/15.
-  Copyright (c) 2015 nz.co.danielw. All rights reserved.
-*/
-GOOD_MORNING="Guten Morgen";
